# bpcommons

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog.rst  LICENSE  MANIFEST.in  README.rst  buildout.cfg  checklist.rst  django1.1.cfg  django1.2.cfg  pyproject.toml  requirements-doc.txt  requirements.txt  requirements_all.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml
commons/: cache.py  context_processors.py  datetimeutils.py  dbutils.py  fields.py  formutils.py  imageutils.py  js_utils.py  model_fields.py  models.py  shortcuts.py  template.py  utils.py  views.py  word.py
commons/form/: fields.py
commons/forms/: __init__.py  decorators.py  fields.py  utils.py  widgets.py
commons/http/: __init__.py
commons/models/: __init__.py  base.py  decorators.py  fields.py  utils.py
commons/shortcuts/: __init__.py
commons/templatetags/: common_tags.py  datetime_tags.py  datetimeutils.py  googlead_tags.py  html_tags.py  htmlutils.py  string_tags.py
commons/test/: simple.py
commons/tests/: __init__.py  cache_tests.py  http.py  javascript_tests.py  template_tests.py  templatetags_tests.py  test_tags.py  urls.py  utils_tests.py  views_tests.py
commons/utils/: __init__.py  cache.py  datastructures.py  dbi.py  file.py  html.py  javascript.py  num.py  shortcuts.py  string.py  strutils.py  (+3 more)
example/: manage.py  settings.py
setup/: base.include.txt  bootstrap-bootstrap.py  requirements-buildbot-django1.1.txt  requirements-buildbot-django1.2.txt  requirements-buildbot-django1.3.txt  requirements-buildbot-django1.4.txt  requirements-buildout-django1.2.txt  requirements.txt  requirements_all.txt  requirements_buildbot-1.1.txt  requirements_buildbot-1.2.txt  requirements_buildbot.txt
tests/: conftest.py  settings.py  test_cache.py  test_forms_field.py  test_models_base.py  test_models_fields.py  test_models_utils.py  test_shortcuts.py  test_template.py  test_templatetags.py  test_views.py
(+96 files in other folders)
