[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beproud.django.commons"
dynamic = ["version"]
description = "Common utilities for Django"
requires-python = ">=3.10"
readme = "README.rst"
license = {text = "BSD"}
authors = [
    { name = "BeProud Inc.", email = "project@beproud.jp" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2", "six",
]

[project.optional-dependencies]
doc = ["sphinx"]

[project.urls]
Homepage = "http://www.beproud.jp/"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "beproud.django.commons.VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["beproud.django.commons*"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{310,311,312}-dj{42,52},py{313,314}-dj52

[testenv]
deps =
    pytest
    pytest-django
    factory-boy
    six
    BeautifulSoup4==4.10.0
    dj42: Django>=4.2,<5.0
    dj52: Django>=5.2,<6.0

commands=pytest tests {posargs}

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313
    3.14: py314

[gh-actions:env]
DJANGO =
    4.2: dj42
    5.2: dj52
"""
